objects/ortoo_e2a__EmailMessage__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Support_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship to Academic Support Project</description>
        <label>Academic Support Project</label>
        <referenceTo>Academic_Support_Project__c</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>e2a_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Book_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Book Project</label>
        <referenceTo>Book_Project__c</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>e2a_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Agreement</label>
        <referenceTo>Partner_Agreement__c</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>e2a_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MW_Project__c</referenceTo>
        <relationshipLabel>e2a Emails</relationshipLabel>
        <relationshipName>e2a_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>relationship to Social Action</description>
        <label>Social Action</label>
        <referenceTo>Social_Action__c</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>e2a_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>